--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <a href="statistics">Go to Statistics</a>
+    <div id="app"></div>
 
     <script src="//localhost:9000/build/build.js"></script>
 </body>
